Fixed alignment issue with column context menu

--- a/data-grid.css
+++ b/data-grid.css
@@ -32,6 +32,7 @@ data-grid {
   display: block;
   background: var(--header-background);
   min-height: 6rem;
+  position: relative;
 }
 data-grid img {
   border: none;
